# leak-hunt

./: .gitignore  .leakhuntignore  .pre-commit-hooks.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  release.yml
src/leak_hunt/: __init__.py  __main__.py  baseline.py  cli.py  exclusoes.py  relatorio.py  validadores.py  varredura.py  versao.py
src/leak_hunt/regras/: __init__.py  ambiente.py  arquivos.py  base.py  brasil.py  genericos.py
tests/: test_baseline.py  test_cli.py  test_exclusoes.py  test_integracao.py  test_regras_ambiente.py  test_regras_brasil.py  test_regras_genericas.py  test_relatorio.py  test_validadores.py  test_varredura.py
