[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "leak-hunt"
dynamic = ["version"]
description = "Scanner de segredos em historico Git com regras focadas no Brasil"
readme = "README.md"
requires-python = ">=3.10"
license = { file = "LICENSE" }
authors = [
  { name = "kaue34381210-star", email = "kaue34381210@gmail.com" },
]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Environment :: Console",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Security",
]

[project.optional-dependencies]
dev = ["pytest>=7", "pytest-cov>=5"]

[project.scripts]
leak-hunt = "leak_hunt.cli:main"

[tool.setuptools.dynamic]
version = { attr = "leak_hunt.versao.__version__" }

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-q"
pythonpath = ["src"]
testpaths = ["tests"]
